--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,24 +24,39 @@
 <!-- === (분리된) 공통 네비게이션 바 === -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
     <div class="container">
-        <a class="navbar-brand" href="studies.html">📚 온라인 독서 소모임</a>
+        <a class="navbar-brand" href="/studies">📚 온라인 독서 소모임</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-                <a class="nav-link" href="studies.html">스터디 찾기</a>
+                <a class="nav-link" href="/studies">스터디 찾기</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="study-form.html">스터디 만들기</a>
+                <a class="nav-link" href="/studies/new">스터디 만들기</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="mypage.html">마이페이지</a>
+                <a class="nav-link" href="/mypage">마이페이지</a>
+            </li>
+    
+            <% if (user) { %>
+            <!-- 로그인 상태 -->
+            <li class="nav-item">
+                <form action="/auth/logout" method="POST" style="display:inline;">
+                <button type="submit" class="btn btn-link nav-link">로그아웃</button>
+                </form>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="login.html">로그인</a>
+                <span class="nav-link text-light">안녕하세요, <%= user.nickname %>님!</span>
             </li>
+            <% } else { %>
+            <!-- 로그아웃 상태 -->
+            <li class="nav-item">
+                <a class="nav-link" href="/login">로그인</a>
+            </li>
+            <% } %>
+
             </ul>
         </div>
     </div>
