--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,9 +1,11 @@
-</main> <!-- .container 종료 -->
+</div>
 <!-- === 본문 끝 === -->
 
 <footer class="text-center text-muted mt-5 mb-3">
     <p>&copy; 2025 Web Project Team. (배지우, 김민규, 정의진)</p>
 </footer>
+</main>
+</div>
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
