--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,7 +18,7 @@
 <nav class="navbar navbar-expand-lg mb-4">
     <div class="container">
         <!-- 로고 -->
-        <a class="navbar-brand" href="/studies">
+        <a class="navbar-brand ms-1" href="/studies">
             <img src="/images/book-spells-white.png" alt="아이콘" class="icon-png-nav">
             STUDY LINK 
             <span class="brand-subtitle">—&ensp;온라인 독서 소모임</span></a>
