feat: 채팅/게시판/AI + EJS 구조 변경

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,7 +24,7 @@
 <!-- === (분리된) 공통 네비게이션 바 === -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
     <div class="container">
-        <a class="navbar-brand" href="/studies">📚 온라인 독서 소모임</a>
+        <a class="navbar-brand" href="/">📚 온라인 독서 소모임</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
