--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -57,7 +57,7 @@
                     <!-- User Profile Section -->
                     <li class="nav-item ms-lg-3">
                         <div class="d-flex align-items-center gap-2 px-3 py-2 rounded-pill" style="background: rgba(255, 255, 255, 0.1);">
-                            <svg width="20" height="20" fill="currentColor" viewBox="0 0 16 16" style="opacity: 0.8;">
+                            <svg width="20" height="20" fill="white" viewBox="0 0 16 16">
                                 <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
                             </svg>
                             <span class="text-white small fw-semibold">@<%= user.nickname %></span>
